# melonDS-android-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ARMJIT_Memory.cpp  ARM_InstrInfo.cpp  CMakeLists.txt  Config.cpp  Config.h  DSi_NAND.cpp  FileSavestate.cpp  FileSavestate.h  GBACart.cpp  GPU3D.h  GPU3D_Compute.cpp  GPU3D_Compute.h  GPU3D_OpenGL.cpp  GPU3D_OpenGL.h  GPU3D_OpenGL_shaders.h  GPU_OpenGL.cpp  GPU_OpenGL.h  GPU_OpenGL_shaders.h  MemorySavestate.cpp  MemorySavestate.h  NDS.cpp  NDSCart.cpp  OpenGLSupport.cpp  Platform.h  PlatformOGL.h  SPI.cpp  Savestate.cpp  Savestate.h
src/android/: AndroidCameraHandler.h  AndroidFileHandler.h  AndroidRumbleManager.h  CMakeLists.txt  CartLoader.cpp  CartLoader.h  Configuration.h  DSiSupport.cpp  DSiSupport.h  EmulatorArgsBuilder.cpp  EmulatorArgsBuilder.h  FrameRenderedCallback.h  InputAndroid.cpp  LAN_PCap.cpp  LAN_Socket.cpp  LocalMultiplayer.cpp  MelonDS.cpp  MelonDS.h  MelonDSAudio.cpp  MelonDSAudio.h  MelonEventMessenger.h  MelonInstance.cpp  MelonInstance.h  MelonLog.h  MicInputOboeCallback.cpp  MicInputOboeCallback.h  OboeCallback.cpp  OboeCallback.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRenderer.cpp  PlatformAndroid.cpp  PlatformAndroid.h  PlatformAndroid_AAC.cpp  ROMManager.cpp  ROMManager.h  RomGbaSlotConfig.h  SDCardArgsBuilder.cpp  SDCardArgsBuilder.h  SaveManager.cpp  (+4 more)
src/android/libslirp/src/: util.c
src/android/renderer/: FrameQueue.cpp  FrameQueue.h  Renderer.h  ScreenshotRenderer.cpp  ScreenshotRenderer.h
src/android/retroachievements/: RAAchievement.h  RACallback.h  RALeaderboard.h  RetroAchievements.cpp  RetroAchievements.h  RetroAchievementsManager.cpp  RetroAchievementsManager.h
src/dolphin/: CommonFuncs.cpp
src/frontend/: FrontendUtil.h  RewindManager.cpp  RewindManager.h  SharedConfig.h  Util_ROM.cpp
src/net/: CMakeLists.txt  MPInterface.cpp
